# agile-workflow-demo

./: README.md  pyproject.toml
src/: cashflow_data.sql  principal_revenue.sql
